# Easy-Park

./: .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
app/: main.py
app/models/: __init__.py  enums.py  request.py  response.py
app/services/: __init__.py  auth_service.py  parking_service.py
app/utils/: __init__.py  auth.py  time.py  timestamp.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_reservation_workflow.py
tests/security/: test_security.py
tests/unit/: test_auth_advanced.py  test_auth_service.py  test_auth_utils.py  test_main_app.py  test_parking_service.py  test_time_utils.py
